--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
+  "name": "gh-action-is-file-changed",
   "version": "0.0.0",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "GitHub Action that checks if Pull Request has changes in files matching certain pattern",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,29 +15,27 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/dir01/is-file-changed.git"
   },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@actions/exec": "^1.1.1",
+    "@actions/github": "^5.1.1",
+    "minimatch": "^5.1.2"
   },
   "devDependencies": {
+    "@types/minimatch": "^5.1.2",
     "@types/node": "^18.11.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
+    "@typescript-eslint/parser": "^5.48.1",
+    "@vercel/ncc": "^0.36.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-github": "^4.6.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.3.1",
     "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
+    "prettier": "^2.8.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.4.4"
   }
 }
